# playground

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/endpoints/: user.py
app/core/: config.py  security.py
app/crud/: __init__.py  base.py  crud_user.py  curd_answer.py  curd_question.py
app/db/: init_db.py
app/migrations/: env.py
app/models/: __init__.py  answer.py  question.py  user.py
app/schemas/: __init__.py
app/tests/: conftest.py  session.py
app/tests/crud/: test_answer.py  test_question.py  test_user.py
src/core/: config.py  security.py
src/crud/: base.py  crud_user.py  curd_answer.py  curd_question.py
src/db/: init_db.py  session.py
src/models/: answer.py  question.py  user.py
src/schemas/: __init__.py  answer.py  question.py  user.py
