[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["moon <black2st11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.97.0"}
sqlalchemy = "^2.0.16"
jose = "^1.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
