[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["moon <black2st11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.97.0"}
sqlalchemy = "^2.0.16"
jose = "^1.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pytest = "^7.3.2"
pydantic = "^1.10.9"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
